# Python.AnsiCode

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  rsync-exclude.txt  test.ps1
src/ansi_code/: __init__.py
src/ansi_code/model/: color_fg.py  cursor.py
tests/: test_ansi.py
